Fixed navbar on smaller device (mobile navigation)

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -11,3 +11,10 @@
   position: relative;
   margin-bottom: 55px;
 }
+
+// Mobile device
+@media (max-width: 810px) {
+  .absolute {
+    min-height: auto;
+  }
+}
